--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "cakephp/cakephp": "5.1.*",
         "cakephp/migrations": "^4.0.0",
         "cakephp/plugin-installer": "^2.0",
+        "league/oauth2-google": "^4.0",
         "mobiledetect/mobiledetectlib": "^4.8.03"
     },
     "require-dev": {
